--- a/box-office-mojo/scrape.ipynb
+++ b/box-office-mojo/scrape.ipynb
@@ -2,53 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from requests_html import HTML"
+    "from requests_html import HTML\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = 'https://www.boxofficemojo.com/year/world/'\n",
-    "\n",
     "r = requests.get(url)\n",
     "r_html = HTML(html=r.text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_class = '.imdb-scroll-table'\n",
-    "r_table = r_html.find(table_class)\n",
+    "data_table = r_html.find('table',first=True)\n",
+    "header = []\n",
+    "body_data = []\n",
+    "if data_table:\n",
+    "    header = [th.text for th in data_table.find('th')]\n",
     "\n",
-    "table_headers = []\n",
-    "table_data = []\n",
-    "if len(r_table) == 1:\n",
-    "    table = r_table[0]\n",
-    "    tables_rows = table.find('tr')\n",
-    "    table_headers = [x.text for x in tables_rows[0].find('th')]\n",
+    "    table_body = data_table.find('tr')\n",
     "\n",
-    "    for row in tables_rows[1:]:\n",
-    "        table_data.append([th.text for th in row.find('th')])\n",
+    "    for i in range(1,len(table_body)):\n",
+    "        data = [th.text for th in table_body[i].find('td')]\n",
+    "        body_data.append(data)\n",
     "\n",
-    "# table_headers\n",
-    "# table_data"
+    "data_frame = pd.DataFrame(data=body_data, columns=header)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('venv': venv)",
+   "display_name": "Python 3.6.8 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -62,12 +60,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.6.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3f1c9a5948027c346bc97b6eecdc109beacd6e38bb0dd9a0f73eae137d48d174"
+    "hash": "ec90d3da502d2f37710bb22ccbcaf96bbeaf36c6c5a1669596b89fed531bf4c3"
    }
   }
  },
