Timetable scraping continuation

--- a/notebooks/isy timetable.ipynb
+++ b/notebooks/isy timetable.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/rodrigue/dev/web_scraping\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#cd .."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,9 +103,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "None",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 19\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[39mfor\u001b[39;00m header,td \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(headers[\u001b[39m1\u001b[39m:],tds):\n\u001b[1;32m     18\u001b[0m             timetable[header] \u001b[39m=\u001b[39m td\u001b[39m.\u001b[39mtext\n\u001b[0;32m---> 19\u001b[0m         timetables[day]\u001b[39m.\u001b[39mappend(timetable)\n\u001b[1;32m     22\u001b[0m timetables\n",
+      "\u001b[0;31mKeyError\u001b[0m: None"
+     ]
+    }
+   ],
    "source": [
     "timetable_table = html_obj.find(\"table\", first=True)\n",
     "headers = []\n",
@@ -141,9 +145,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Понедельник': [{'Время': '09:45-11:20', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '12:10-13:45',\n",
+       "   'Неделя': '21',\n",
+       "   'Дисциплина': 'Экология и устойчивое развитие (Green Class)',\n",
+       "   'Тип занятия': 'Лекция',\n",
+       "   'Преподаватель': 'Свирский С. Э.',\n",
+       "   'Аудитория': '2-218',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '13:55-15:30',\n",
+       "   'Неделя': '23 24 25 26 27 28 29 30 31 32 33 34 35 38 39 40 41',\n",
+       "   'Дисциплина': 'Физическая культура и спорт',\n",
+       "   'Тип занятия': 'Физвоспитание',\n",
+       "   'Преподаватель': 'Преподаватель не определён',\n",
+       "   'Аудитория': 'Спортивный зал',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '16:10-17:45',\n",
+       "   'Неделя': '25 27 29 31 33 35 39',\n",
+       "   'Дисциплина': 'Основы компьютерного инжиниринга',\n",
+       "   'Тип занятия': 'Лабораторная работа',\n",
+       "   'Преподаватель': 'Киселева М. А.',\n",
+       "   'Аудитория': '8-521',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '16:10-17:45',\n",
+       "   'Неделя': '25 27 29 31 33 35 39',\n",
+       "   'Дисциплина': 'Основы компьютерного инжиниринга',\n",
+       "   'Тип занятия': 'Лабораторная работа',\n",
+       "   'Преподаватель': 'Чертовских С. В.',\n",
+       "   'Аудитория': '8-517',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '17:55-19:30',\n",
+       "   'Неделя': '25 27 29 31 33 35 39',\n",
+       "   'Дисциплина': 'Основы компьютерного инжиниринга',\n",
+       "   'Тип занятия': 'Лабораторная работа',\n",
+       "   'Преподаватель': 'Киселева М. А.',\n",
+       "   'Аудитория': '8-521',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '17:55-19:30',\n",
+       "   'Неделя': '25 27 29 31 33 35 39',\n",
+       "   'Дисциплина': 'Основы компьютерного инжиниринга',\n",
+       "   'Тип занятия': 'Лабораторная работа',\n",
+       "   'Преподаватель': 'Чертовских С. В.',\n",
+       "   'Аудитория': '8-517',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '19:40-21:15', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '18:25-19:55', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '20:05-21:40', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '21:55-23:00', 'Неделя': 'Нет информации'}],\n",
+       " 'Вторник': [{'Время': '09:45-11:20',\n",
+       "   'Неделя': '21 22 23 24 25 26 27 28 29 30 31 32 33 34 35',\n",
+       "   'Дисциплина': 'Техническая и вычислительная физика',\n",
+       "   'Тип занятия': 'Лекция',\n",
+       "   'Преподаватель': 'Лазарев В. В.',\n",
+       "   'Аудитория': '2-212',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '12:10-13:45',\n",
+       "   'Неделя': '23 24 25 26 27 28 29 30 31 32 33 34 35',\n",
+       "   'Дисциплина': 'Техническая и вычислительная физика',\n",
+       "   'Тип занятия': 'Практика (семинар)',\n",
+       "   'Преподаватель': 'Лазарев В. В.',\n",
+       "   'Аудитория': '1-335',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '13:55-15:30',\n",
+       "   'Неделя': '24 25 26 27 28 29',\n",
+       "   'Дисциплина': 'Технологии эффективных деловых и научных коммуникаций',\n",
+       "   'Тип занятия': 'Практика (семинар)',\n",
+       "   'Преподаватель': 'Салихова Э. А.',\n",
+       "   'Аудитория': '9-303',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '16:10-17:45', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '17:55-19:30',\n",
+       "   'Неделя': '21 22 23 24 25 26',\n",
+       "   'Дисциплина': 'Экология и устойчивое развитие (Green Class)',\n",
+       "   'Тип занятия': 'Лекция',\n",
+       "   'Преподаватель': 'Свирский С. Э.',\n",
+       "   'Аудитория': 'Дистанционно',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '19:40-21:15', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '18:25-19:55', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '20:05-21:40', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '21:55-23:00', 'Неделя': 'Нет информации'}],\n",
+       " 'Среда': [{'Время': '09:45-11:20',\n",
+       "   'Неделя': '23',\n",
+       "   'Дисциплина': 'Технологии эффективных деловых и научных коммуникаций',\n",
+       "   'Тип занятия': 'Лекция',\n",
+       "   'Преподаватель': 'Салихова Э. А.',\n",
+       "   'Аудитория': '9-202',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '12:10-13:45',\n",
+       "   'Неделя': '23 24 25 26 27 29 30 31 32 33 34 35 36 37 38 39 40 41',\n",
+       "   'Дисциплина': 'Иностранный язык',\n",
+       "   'Тип занятия': 'Практика (семинар)',\n",
+       "   'Преподаватель': 'Преподаватель не определён',\n",
+       "   'Аудитория': '1-303',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '13:55-15:30', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '16:10-17:45', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '17:55-19:30', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '19:40-21:15', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '18:25-19:55', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '20:05-21:40', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '21:55-23:00', 'Неделя': 'Нет информации'}],\n",
+       " 'Четверг': [{'Время': '09:45-11:20', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '12:10-13:45', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '13:55-15:30', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '16:10-17:45', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '17:55-19:30', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '19:40-21:15', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '18:25-19:55', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '20:05-21:40', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '21:55-23:00', 'Неделя': 'Нет информации'}],\n",
+       " 'Пятница': [{'Время': '09:45-11:20', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '12:10-13:45', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '13:55-15:30', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '16:10-17:45', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '17:55-19:30', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '19:40-21:15', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '18:25-19:55', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '20:05-21:40', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '21:55-23:00', 'Неделя': 'Нет информации'}],\n",
+       " 'Суббота': [{'Время': '09:45-11:20', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '12:10-13:45', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '13:55-15:30', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '16:10-17:45', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '17:55-19:30',\n",
+       "   'Неделя': '22 23 24 25 27',\n",
+       "   'Дисциплина': 'Основы компьютерного инжиниринга',\n",
+       "   'Тип занятия': 'Лекция',\n",
+       "   'Преподаватель': 'Горлова И. Р.',\n",
+       "   'Аудитория': 'Дистанционно',\n",
+       "   'Комментарий': ''},\n",
+       "  {'Время': '19:40-21:15', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '18:25-19:55', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '20:05-21:40', 'Неделя': 'Нет информации'},\n",
+       "  {'Время': '21:55-23:00', 'Неделя': 'Нет информации'}]}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test scraper for group\n",
     "scraper1 = TimetableScraper(group=\"АС-112Б\",semester=2,academic_year='2022/2023', headless=True)\n",
@@ -181,6 +329,15 @@
     "# Test scraper for teacher\n",
     "scraper3 = TimetableScraper(teacher=\"Абдрахманова\",semester=2,academic_year='2022/2023', headless=True)\n",
     "scraper3.get_timetables_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scraper3.get_list_of(teacher=True)"
    ]
   }
  ],
